--- a/src/App.css
+++ b/src/App.css
@@ -1,78 +1,83 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.1/font/bootstrap-icons.css");
 
 .bgImgHeader {
-    background-image: url("./Image/header-img.jpg");
-    max-width: 100%;
-    height: 100%;
-    background-size: cover;
-    background-repeat:no-repeat;
+  background-image: url("./Image/header-img.jpg");
+  max-width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
-.txt{
-    color: #f86e23;
-    width: 30% !important;
-    text-transform: capitalize;
-    padding-right: 20px !important;
+.txt {
+  color: #f86e23;
+  width: 30% !important;
+  text-transform: capitalize;
+  padding-right: 20px !important;
 }
 
-.mbImg img{
-    max-width: 250px;
+.mbImg img {
+  max-width: 250px;
 }
 
-.mbImg{
-    position: relative;
+.mbImg {
+  position: relative;
 }
-.img2{
-    position: absolute;
-    right: 50px;
-    top: 10px;
-}
-
-.discover{
-    text-align: center;
-    font-weight: 700 !important;
-    color: #ffffff;
-    font-size: 2.5rem !important;
+.img2 {
+  position: absolute;
+  right: 50px;
+  top: 10px;
 }
 
-.Explore-text{
-    font-size: 24px;
-    text-align: center;
-    color: #ffffff;
-    font-weight: 400 !important;
+.discover {
+  text-align: center;
+  font-weight: 700 !important;
+  color: #ffffff;
+  font-size: 2.5rem !important;
 }
 
-.headCol h1{
-    color: #f86e23;
-    font-size: 2rem;
+.Explore-text {
+  font-size: 24px;
+  text-align: center;
+  color: #ffffff;
+  font-weight: 400 !important;
 }
 
-.headCol h4{
-    color: #409fc9;
+.headCol h1 {
+  color: #f86e23;
+  font-size: 2rem;
+}
+
+.headCol h4 {
+  color: #409fc9;
 }
 
 .headCol p {
-    color:teal;
-    margin-bottom: 20px;
-    line-height: 30px;
+  color: teal;
+  margin-bottom: 20px;
+  line-height: 30px;
 }
 
 .headCol ul li {
-    color:teal;
-    margin-bottom: 10px;
+  color: teal;
+  margin-bottom: 10px;
+}
+.headCol ol li {
+  color: teal;
+  margin-bottom: 10px;
+  list-style: lower-roman;
 }
 
-.bgImg3d img{
-    max-width: 100%;
-    height: 100%;
-    background-size: cover;
-    background-repeat:no-repeat;
+.bgImg3d img {
+  max-width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .heading3D {
-    font-size: 50px; 
-    color: white;
-    font-weight: 700;
+  font-size: 50px;
+  color: white;
+  font-weight: 700;
 }
 
 .cardImgBlog {
@@ -80,7 +85,7 @@
 }
 
 .cardImgBlog .cardIcon {
-  width: 100% ;
+  width: 100%;
   height: 100%;
   margin: 0 auto;
   position: absolute;
@@ -90,7 +95,6 @@
   transition: all 0.5s ease;
   visibility: hidden;
   opacity: 0;
-  
 }
 
 .cardImgBlog:hover .cardIcon {
@@ -101,40 +105,40 @@
   cursor: pointer;
 }
 
-.cardIcon::before{
-    border-radius: 50%;
-    height: 100px !important;
-    width: 100px !important;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: blue;
-    color: #ffffff;
-    font-size: 20px !important;
+.cardIcon::before {
+  border-radius: 50%;
+  height: 100px !important;
+  width: 100px !important;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: blue;
+  color: #ffffff;
+  font-size: 20px !important;
 }
 
 .hstack {
-    align-items: center !important;
-    align-self: end !important;
+  align-items: center !important;
+  align-self: end !important;
 }
 
-.iconEdit{
-    width: 34px !important;
-    height: 34px !important;
-    display: flex;   
-    justify-content: center !important;
-    align-items: center !important;
-    color: #ffffff;
-    font-size: 20px;
-    border-radius: 5px;
+.iconEdit {
+  width: 34px !important;
+  height: 34px !important;
+  display: flex;
+  justify-content: center !important;
+  align-items: center !important;
+  color: #ffffff;
+  font-size: 20px;
+  border-radius: 5px;
 }
 
 .footer-link-edit a {
-    color: #ffffff !important;
-    text-decoration: none !important;
-    margin-right: 20px;
+  color: #ffffff !important;
+  text-decoration: none !important;
+  margin-right: 20px;
 }
 
-.displyBlock{
-    display: none;
+.displyBlock {
+  display: none;
 }
