--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,11 @@
   background-size: cover;
   background-repeat: no-repeat;
 }
-
+.headerTxt {
+  color: #f86e23;
+  width: 30% !important;
+  padding-right: 20px !important;
+}
 .txt {
   color: #f86e23;
   width: 30% !important;
