--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.1/font/bootstrap-icons.css");
 
 .bgImgHeader {
-  background-image: url("./Image/header-img.jpg");
-  max-width: 100%;
+  background-image: url("./Image/Arwin.jpg");
+  max-width: 100vw;
   height: 100%;
-  background-size: cover;
+  background-size: 100vw 100vh;
   background-repeat: no-repeat;
 }
 .headerTxt {
