--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.1/font/bootstrap-icons.css");
 
 .bgImgHeader {
-  background-image: url("./Image/Arwin.jpg");
+  background-image: url("./Image/galax.jpg");
   max-width: 100vw;
   height: 100%;
   background-size: 100vw 100vh;
