--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.1/font/bootstrap-icons.css");
 
 .bgImgHeader {
-  background-image: url("./Image/galax.jpg");
+  background-image: url("./Image/kuttaBilai.jfif");
   max-width: 100vw;
-  height: 100%;
+  height: 100vh;
   background-size: 100vw 100vh;
   background-repeat: no-repeat;
 }
