--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,14 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.1/font/bootstrap-icons.css");
 
+@media only screen and (max-width: 1280px) {
+  .bgImgHeader {
+    height: 100vh;
+  }
+  .headerTxt {
+    padding-right: -20px;
+  }
+}
+
 .bgImgHeader {
   background-image: url("./Image/kuttaBilai.jfif");
   max-width: 100vw;
