--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
   }
   .headerTxt {
     padding-right: -20px;
+    width: 40% !important;
   }
 }
 
@@ -15,6 +16,8 @@
   height: 100vh;
   background-size: 100vw 100vh;
   background-repeat: no-repeat;
+  background-color: white;
+  background-position: 4.3rem -3.8rem;
 }
 .headerTxt {
   color: #f86e23;
