--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,43 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.1/font/bootstrap-icons.css");
 
-@media only screen and (max-width: 1280px) {
-  .bgImgHeader {
-    height: 90vh;
-  }
-  .headerTxt {
-    padding-right: -20px;
-    width: 40% !important;
+/* 
+ // for small devices */
+@media only screen and (max-width: 600px) {
+  .headerWithImageBg {
+    height: 100vh !important;
+    width: 100vw !important;
   }
 }
 
+/* 
+for extra big devices */
+@media only screen and (min-width: 1200px) {
+  .bgImgHeader {
+    max-width: 100vw !important;
+    background-size: 60vw 60vh !important;
+    background-repeat: no-repeat;
+    background-color: white;
+    background-position: 45.3rem 0.9rem !important;
+  }
+  .headerTxt {
+    color: #f86e23;
+    width: 30% !important;
+    padding-left: -40px !important;
+  }
+  .headerBottom {
+    width: 90vw !important;
+  }
+}
+/* style={{ backgroundColor:"#00aff0"}} */
 .bgImgHeader {
   background-image: url("./Image/kuttaBilai.jfif");
   max-width: 100vw;
-  height: 90vh;
   background-size: 100vw 90vh;
   background-repeat: no-repeat;
   background-color: white;
   background-position: 4.3rem -3.8rem;
 }
+
 .headerTxt {
   color: #f86e23;
   width: 30% !important;
@@ -30,7 +49,9 @@
   text-transform: capitalize;
   padding-right: 20px !important;
 }
-
+.headerBottom {
+  background-color: #00aff0;
+}
 .mbImg img {
   max-width: 250px;
 }
@@ -49,6 +70,7 @@
   font-weight: 700 !important;
   color: #ffffff;
   font-size: 2.5rem !important;
+  width: 100%;
 }
 
 .Explore-text {
