--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 /* 
  // for small devices */
 
- @media (max-width: 575px) {
+/* @media (max-width: 575px) {
   .fotter-parr p {
     text-align: center !important;
     margin-bottom: 15px !important;
@@ -14,14 +14,16 @@
     justify-content: center;
   }
 
-  .ftImg img{
+  .ftImg img {
     width: 140px;
     height: auto;
   }
 
-  .smMrBt{margin-bottom: 25px;}
-}
-
+  .smMrBt {
+    margin-bottom: 25px;
+  }
+} */
+/* 
 @media (min-width: 576px) {
   .fotter-parr p {
     text-align: center !important;
@@ -34,10 +36,12 @@
     height: 100vh !important;
     width: 100vw !important;
   }
-}
+} */
 
 /* 
 for extra big devices */
+/* 
+
 @media only screen and (min-width: 1200px) {
   .bgImgHeader {
     max-width: 100vw !important;
@@ -50,24 +54,108 @@ for extra big devices */
     color: #f86e23;
     width: 30% !important;
   }
-  /* .headerBottom {
+  .headerBottom {
     width: 90vw !important;
-  } */
+  }
 }
-/* style={{ backgroundColor:"#00aff0"}} */
-.bgImgHeader {
-  background-image: url("./Image/kuttaBilai.jfif");
+.logoImage {
+  position: absolute;
+}
+
+
+
+  /*24 23 inch monitor */
+@media only screen and (min-width: 1920px) {
+  .relativeContainer {
+    max-width: 100vw !important;
+  }
+  .logoImage {
+    top: 2vh;
+    left: 4vw;
+  }
+
+  .headerTxt {
+    color: #f86e23;
+    position: absolute;
+    top: 23vh;
+    left: 4vw;
+    max-width: 30% !important;
+  }
+  .topBannerImg {
+    height: 60vh !important;
+    width: 60vw !important;
+    position: relative;
+    left: 0rem;
+  }
+  .headerBottom {
+    max-width: 100vw !important;
+    margin-right: 20rem !important;
+    margin-top: 3rem !important;
+    height: 5rem !important;
+  }
+  .features {
+    max-width: 100vw !important;
+  }
+}
+/* 
+14 inch  */
+@media only screen and (min-width: 1200px) and (max-width: 1920px) {
+  .relativeContainer {
+    max-width: 100vw !important;
+  }
+  .logoImage {
+    top: 2vh;
+    left: 8vw;
+  }
+
+  .headerTxt {
+    color: #f86e23;
+    position: absolute;
+    top: 23vh;
+    left: 4vw;
+    max-width: 30% !important;
+  }
+  .topBannerImg {
+    height: 60vh !important;
+    width: 55vw !important;
+    position: relative;
+    margin-bottom: 3rem;
+  }
+  .headerBottom {
+    max-width: 100vw !important;
+    margin-right: 20rem !important;
+    margin-top: 1rem !important;
+    height: 3rem !important;
+  }
+  .features {
+    max-width: 100vw !important;
+  }
+}
+
+#root {
+  background-color: #00aff0 !important;
+}
+*/ .relativeContainer {
+  position: relative;
   max-width: 100vw;
-  background-size: 100vw 90vh;
-  background-repeat: no-repeat;
-  background-color: white;
-  background-position: 4.3rem -3.8rem;
+}
+.logoImage {
+  position: absolute;
+  top: 2vh;
+  left: 5vw;
+}
+.topBannerImg {
+  height: 90vh;
+  max-width: 90vw;
+  position: relative;
+  left: 18rem;
 }
 
 .headerTxt {
   color: #f86e23;
-  width: 30% !important;
-  padding-right: 20px !important;
+  position: absolute;
+  top: 23vh;
+  left: 4vw;
 }
 .txt {
   color: #f86e23;
@@ -75,8 +163,20 @@ for extra big devices */
   text-transform: capitalize;
   padding-right: 20px !important;
 }
+
 .headerBottom {
-  background-color: #00aff0;
+  color: #ffff !important;
+  text-align: center;
+  font-weight: 700 !important;
+  font-size: 2.5rem !important;
+  height: 10vh;
+  max-width: 100vw;
+}
+.features {
+  max-width: 100vw !important;
+}
+.featureImg {
+  max-width: 20vw;
 }
 .mbImg img {
   max-width: 250px;
@@ -89,14 +189,6 @@ for extra big devices */
   position: absolute;
   right: 50px;
   top: 10px;
-}
-
-.discover {
-  text-align: center;
-  font-weight: 700 !important;
-  color: #ffffff;
-  font-size: 2.5rem !important;
-  width: 100%;
 }
 
 .Explore-text {
