--- a/src/App.css
+++ b/src/App.css
@@ -62,7 +62,7 @@ for extra big devices */
   position: absolute;
 }
 
-
+// new
 
   /*24 23 inch monitor */
 @media only screen and (min-width: 1920px) {
