--- a/src/App.css
+++ b/src/App.css
@@ -173,21 +173,22 @@
   }
   .logoImage {
     top: 2vh;
-    left: 8vw;
+    left: 15vw !important;
   }
   .headerTxt {
     color: #f86e23;
     position: absolute !important;
-    top: 33vh !important;
-    left: 4vw !important;
-    max-width: 90% !important;
+    top: 90vh !important;
+    left: 6vw !important;
+    max-width: 100vw !important;
+    margin-right: 0.5rem !important;
   }
   .topBannerImg {
-    height: 50vh !important;
-    width: 80vw !important;
+    height: 60vh !important;
+    width: 90vw !important;
     position: relative !important;
-    top: 95vh !important;
-    left: 6vh !important;
+    top: 35vh !important;
+    left: 3vh !important;
   }
   .headerBottom {
     max-width: 100vw !important;
