--- a/src/App.css
+++ b/src/App.css
@@ -178,7 +178,7 @@
   .headerTxt {
     color: #f86e23;
     position: absolute !important;
-    top: 90vh !important;
+    top: 87vh !important;
     left: 6vw !important;
     max-width: 100vw !important;
     margin-right: 0.5rem !important;
@@ -193,14 +193,18 @@
   .headerBottom {
     max-width: 100vw !important;
     margin-right: 3rem !important;
-    height: 25vh !important;
+    height: 45vh !important;
   }
   .features {
+    max-width: 100vw !important;
+  }
+  #root {
     max-width: 100vw !important;
   }
 }
 #root {
   background-color: #00aff0 !important;
+  max-width: 100vw !important;
 }
 */ .relativeContainer {
   position: relative;
