--- a/src/App.css
+++ b/src/App.css
@@ -205,6 +205,7 @@
 #root {
   background-color: #00aff0 !important;
   max-width: 100vw !important;
+  overflow: hidden !important;
 }
 */ .relativeContainer {
   position: relative;
