--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.1/font/bootstrap-icons.css");
 
 /*24 23 inch monitor */
-@media only screen and (min-width: 1920px) {
+/* @media only screen and (min-width: 1920px) {
   .relativeContainer {
     max-width: 100vw !important;
   }
@@ -35,7 +35,7 @@
 }
 /* 
 14 inch  */
-@media only screen and (min-width: 1200px) and (max-width: 1920px) {
+/* @media only screen and (min-width: 1200px) and (max-width: 1920px) {
   .relativeContainer {
     max-width: 100vw !important;
   }
@@ -66,9 +66,9 @@
   .features {
     max-width: 100vw !important;
   }
-}
+} */
 /* // laptop */
-@media only screen and (min-width: 992px) and (max-width: 1200px) {
+/* @media only screen and (min-width: 992px) and (max-width: 1200px) {
   .relativeContainer {
     max-width: 100vw !important;
   }
@@ -98,10 +98,10 @@
   .features {
     max-width: 100vw !important;
   }
-}
+} */
 /* 
  tablets */
-@media only screen and (min-width: 768px) and (max-width: 992px) {
+/* @media only screen and (min-width: 768px) and (max-width: 992px) {
   .relativeContainer {
     max-width: 100vw !important;
   }
@@ -131,9 +131,9 @@
   .features {
     max-width: 100vw !important;
   }
-}
+} */
 /* big mobiles */
-@media only screen and (min-width: 600px) and (max-width: 768px) {
+/* @media only screen and (min-width: 600px) and (max-width: 768px) {
   .relativeContainer {
     max-width: 100vw !important;
     height: 80vh !important;
@@ -164,9 +164,9 @@
   .features {
     max-width: 100vw !important;
   }
-}
+} */
 /* mobile view  */
-@media only screen and (min-width: 320px) and (max-width: 600px) {
+/* @media only screen and (min-width: 320px) and (max-width: 600px) {
   .relativeContainer {
     max-width: 100vw !important;
     height: 140vh !important;
@@ -197,37 +197,19 @@
   }
   .features {
     max-width: 100vw !important;
-  }
-  #root {
-    max-width: 100vw !important;
-  }
-}
+  } */
+
 #root {
   background-color: #00aff0 !important;
-  max-width: 100vw !important;
   overflow: hidden !important;
 }
 */ .relativeContainer {
   position: relative;
   max-width: 100vw;
 }
-.logoImage {
-  position: absolute;
-  top: 2vh;
-  left: 5vw;
-}
-.topBannerImg {
-  height: 90vh;
-  max-width: 90vw;
-  position: relative;
-  left: 18rem;
-}
 
 .headerTxt {
   color: #f86e23;
-  position: absolute;
-  top: 23vh;
-  left: 4vw;
 }
 .txt {
   color: #f86e23;
@@ -241,8 +223,6 @@
   text-align: center;
   font-weight: 700 !important;
   font-size: 2.5rem !important;
-  height: 10vh;
-  max-width: 100vw;
 }
 .features {
   max-width: 100vw !important;
