--- a/src/App.css
+++ b/src/App.css
@@ -274,7 +274,13 @@
   margin-bottom: 10px;
   list-style: lower-roman;
 }
-
+.serviceLinks {
+  text-decoration: none;
+  color: inherit;
+}
+.serviceLinks:hover {
+  color: #00aff0;
+}
 .bgImg3d img {
   max-width: 100%;
   height: 100%;
